<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainScreen"
    android:orientation="vertical">

    <!-- TODO: Update blank fragment layout -->

    <Button
        android:id="@+id/go_drawing_screen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Go To Drawing Screen" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>